--- a/mongoDB-setup-complete/package.json
+++ b/mongoDB-setup-complete/package.json
@@ -11,16 +11,16 @@
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^1.18.3"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "ejs": "^3.1.9",
+    "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "express-handlebars": "^7.1.2",
-    "mongodb": "^6.3.0",
+    "express-handlebars": "^3.0.0",
+    "mongodb": "^3.1.6",
     "mysql2": "^1.6.1",
-    "pug": "^3.0.2",
-    "sequelize": "^6.35.2"
+    "pug": "^2.0.3",
+    "sequelize": "^5.0.0-beta.11"
   }
 }
